--- a/Master_Notebook.ipynb
+++ b/Master_Notebook.ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "id": "b3b4775e-aa0c-4057-a88d-ab57922fd5fb",
    "metadata": {},
    "outputs": [],
@@ -66,7 +66,11 @@
    "source": [
     "I was able to compile DisPerSE on a virtual machine running Ubuntu 20.04 via Windows WSL. DisPerSE can be downloaded from the aforementioned DisPerSE website or from the github (https://github.com/thierry-sousbie/DisPerSE). There are two required libraries/programs to be able to use the most basic functions of DisPerSE. They are CMake and GSL. You will also want CGAL which is used for the delaunay_2D/3D functions that output files in a format (.NDnet) that can be fed into other functions. \n",
     "\n",
-    "Once you have DisPerSE downloaded, navigate to the \"disperse/build\" directory and type \"cmake ../\" to configure the make files. Then installing should be as simple as running \"make install\". You should then be able to find several executables in the \"disperse/bin\" folder, the most important ones are mse, delaunay_2D, delaunay_3D, and skelconv as these are the ones I used. There are also other functions, however, many of these are not essential."
+    "I installed CMake by running \"sudo apt install cmake\". This will install the newest version which should work for compiling DisPerSE. GNU Scientific Library is a library if useful math functions. I installed it by downloading the newest version (gsl-latest.tar.gz) from https://ftp.gnu.org/gnu/gsl/. I then manually unpacked, compiled, and installed it.\n",
+    "\n",
+    "Once you have DisPerSE downloaded, navigate to the \"disperse/build\" directory and type \"cmake ../\" to configure the make files. Then installing should be as simple as running \"make install\". You should then be able to find several executables in the \"disperse/bin\" folder, the most important ones are mse, delaunay_2D, delaunay_3D, and skelconv as these are the ones I used. There are also other functions, however, many of these are not essential.\n",
+    "\n",
+    "If you run into issues with installing DisPerSE, it is generally best to check the installation output logs. These normally tell you what libraries are not working properly and what functions could not be installed. It can also help to specify the location of the necessary libraries using the \"-DLIBNAME_DIR <path>\" option. "
    ]
   },
   {
@@ -87,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 2,
    "id": "ef4963d1-b555-4703-a985-ca6f57f71bed",
    "metadata": {},
    "outputs": [],
@@ -99,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 3,
    "id": "6193e6e5-ff55-4cc4-b78b-6af7f72c5823",
    "metadata": {},
    "outputs": [],
@@ -113,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 4,
    "id": "e93f157d-455e-41e5-abda-dbfd0da7eaeb",
    "metadata": {},
    "outputs": [],
@@ -129,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "id": "2a97a3b6-0973-45a5-b8ca-8aff7fd56e5e",
    "metadata": {},
    "outputs": [],
@@ -145,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
    "id": "cd26ca3a-b27b-49f9-ab73-a70a2991211e",
    "metadata": {},
    "outputs": [],
@@ -159,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 7,
    "id": "7ac40e95-7471-4052-9db6-af234e435c4c",
    "metadata": {},
    "outputs": [],
@@ -171,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "f6a967c5-74a2-49e8-a4a3-eb1661dfb97c",
    "metadata": {},
    "outputs": [],
@@ -228,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "id": "4d5ba7e2-bff7-4a05-8207-ce2278b0a53b",
    "metadata": {},
    "outputs": [
@@ -262,11 +266,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1d5082e2-535c-4297-a001-1cf285445d15",
+   "id": "2503a1a7-2ffd-45ec-bac7-f0b91bdd9c46",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# The contents of disperse_example.py provided by Dr. Zahkarova\n",
+    "# The contents of disperse_example.py provided by Dr. Zakharova\n",
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt \n",
     "\n",
@@ -378,7 +382,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 11,
    "id": "5d8860b5-70ec-41ac-8a14-a656a154487a",
    "metadata": {},
    "outputs": [],
@@ -390,7 +394,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 12,
    "id": "0dde04c3-4e08-4fee-b60a-2a789ed1a997",
    "metadata": {},
    "outputs": [
@@ -422,7 +426,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 13,
    "id": "d50ddf9a-4e95-4867-ab36-59d6a5988cb4",
    "metadata": {},
    "outputs": [],
@@ -454,7 +458,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 15,
    "id": "8e128ec4-b4c2-49fd-8a20-61ff5e249e01",
    "metadata": {},
    "outputs": [],
@@ -478,12 +482,12 @@
    "id": "ac1ee9d3-67af-4592-87e3-bb806e489599",
    "metadata": {},
    "source": [
-    "It is easiest to identify the cluster members first as these only have one criteria and they are excluded from the filaments. A galaxy is considered a cluster member if it is less than 3.6 Mpc/h from the Virgo Cluster center. Below is the code I wrote to find cluster members."
+    "It is easiest to identify the cluster members first as these only have one criteria and they are excluded from the filaments. A galaxy is considered a cluster member if it is less than 3.6 Mpc/h from the Virgo Cluster center. Below is the code I wrote to find cluster members. I used the supergalactic coordinates of the VFS environment table because these are easier to use for calculating distances between galaxies and filaments/critical points."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 16,
    "id": "ad32de0d-2905-4681-a4e5-94ffbb6adf95",
    "metadata": {},
    "outputs": [],
@@ -504,48 +508,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 41,
    "id": "05330acc-573f-448a-b66b-1f2f962cc478",
    "metadata": {},
    "outputs": [],
    "source": [
-    "ids = myTab['id'] # indices of the original VFS data\n",
+    "vfids = cuttab['VFID'] # VFS identification numbers\n",
     "\n",
+    "# Initializing the arrays for all values I want to record\n",
     "crit_x_gal = []\n",
     "crit_y_gal = []\n",
     "crit_z_gal = []\n",
     "crit_dists_gal = []\n",
-    "crit_id = []\n",
-    "for i in range(len(myTab)):\n",
-    "    gal_id = ids[i]\n",
+    "crit_vfid = []\n",
+    "\n",
+    "# Computes distances between every VFS galaxy and the Virgo Cluster center and records cluster members\n",
+    "for i in range(len(cuttab)):\n",
+    "    gal_id = vfids[i]\n",
     "    crit_dist = sqrt((VCx - x_gal[i])**2 + (VCy - y_gal[i])**2 + (VCz - z_gal[i])**2) # 3D distance from critical point in Mpc/h\n",
     "    if (crit_dist <= 3.6): # A galaxy is a cluster member if it is with 3.6 Mpc/h of the Virgo cluster center\n",
     "        crit_x_gal.append(x_gal[i]) # SGX\n",
     "        crit_y_gal.append(y_gal[i]) # SGY\n",
     "        crit_z_gal.append(z_gal[i]) # SGZ\n",
     "        crit_dists_gal.append(crit_dist)\n",
-    "        crit_id.append(gal_id) # indices"
+    "        crit_vfid.append(gal_id) # indices"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 42,
    "id": "4e341b3e-9e5b-4119-86c4-0209e9d6b4da",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "402"
+       "396"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "len(crit_id)"
+    "# Number of cluster members\n",
+    "len(crit_vfid)"
    ]
   },
   {
@@ -566,34 +574,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 30,
    "id": "baad47f2-f90f-4245-8f45-5e89647b63f2",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Filament Spine Coords\n",
-    "x_fil = np.array(data['x'])\n",
-    "y_fil = np.array(data['y'])\n",
-    "z_fil = np.array(data['z'])\n",
+    "x_fil = np.array(cutdata['x'])\n",
+    "y_fil = np.array(cutdata['y'])\n",
+    "z_fil = np.array(cutdata['z'])\n",
     "\n",
     "# Filament and Cluster Members Coords, Distances from Filaments, and indices\n",
-    "ids = myTab['id'] # index corresponding to a specific galaxy\n",
+    "vfids = cuttab['VFID'] # VFS identification numbers\n",
     "\n",
-    "fil_crit_id = []\n",
+    "fil_crit_vfid = []\n",
     "fil_crit_x_gal = []\n",
     "fil_crit_y_gal = []\n",
     "fil_crit_z_gal = []\n",
     "fil_crit_dists_gal = []\n",
-    "for i in range(len(myTab)): # repeat for all VFS galaxies\n",
+    "for i in range(len(cuttab)): # repeat for all VFS galaxies\n",
     "    for j in range(len(data)): # repeat for all filament spine\n",
-    "        gal_id2 = ids[i] # indices of original VFS data\n",
+    "        gal_id2 = vfids[i] # indices of original VFS data\n",
     "        fil_dist = sqrt((x_fil[j] - x_gal[i])**2 + (y_fil[j] - y_gal[i])**2 + (z_fil[j] - z_gal[i])**2) # 3D distance from filament spines in Mpc/h\n",
     "        if (fil_dist <= 2): # Limits to galaxies within 2Mpc/h of a spine\n",
     "            fil_crit_x_gal.append(x_gal[i]) # SGX\n",
     "            fil_crit_y_gal.append(y_gal[i]) # SGY\n",
     "            fil_crit_z_gal.append(z_gal[i]) # SGZ\n",
     "            fil_crit_dists_gal.append(fil_dist) # distance from a filament spine\n",
-    "            fil_crit_id.append(gal_id2) # indices"
+    "            fil_crit_vfid.append(gal_id2) # VFIDs"
    ]
   },
   {
@@ -601,12 +609,12 @@
    "id": "69141fcb-8e68-40d8-b7eb-373574ee217e",
    "metadata": {},
    "source": [
-    "The work is not done yet; this for loop identifies the same galaxies at multiple filament spines so we need to remove the repeats to get just get one of each filament member. We also need to remove all of the galaxies that were previously identified as cluster members. I accomplished these tasks using a pandas function and boolean algebra as shown below."
+    "The work is not done yet; this for loop identifies the same galaxies at multiple filament spines so we need to remove the repeats to get just get one of each filament member. We also need to remove all of the duplicate galaxies that were previously identified as cluster members. I accomplished these tasks using a pandas function and boolean algebra as shown below."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "id": "9cf0de1a-a166-4fa5-96d8-65ac577d524a",
    "metadata": {},
    "outputs": [],
@@ -616,10 +624,34 @@
     "fil_crit_y = pd.unique(fil_crit_y_gal)\n",
     "crit_x = pd.unique(crit_x_gal)\n",
     "crit_y = pd.unique(crit_y_gal)\n",
+    "fil_crit_vfid = pd.unique(fil_crit_vfid)\n",
     "\n",
     "# Removes cluster members from the fil_crit arrays made above to produce just the locations of filament members\n",
     "fx = [i for i in fil_crit_x if i not in crit_x] # SGX of filament galaxies\n",
-    "fy = [i for i in fil_crit_y if i not in crit_y] # SGY of filament galaxies"
+    "fy = [i for i in fil_crit_y if i not in crit_y] # SGY of filament galaxies\n",
+    "f_vfid = [i for i in fil_crit_vfid if i not in crit_vfid] # SGY of filament galaxies"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "id": "00fb0726-ab00-4089-9f64-3358dd869add",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3629"
+      ]
+     },
+     "execution_count": 54,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Number of filament members\n",
+    "len(f_vfid)"
    ]
   },
   {
@@ -640,7 +672,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 21,
    "id": "4eaeefe5-ee37-4d96-93c8-b97850ad12bd",
    "metadata": {},
    "outputs": [],
@@ -654,27 +686,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 13,
-   "id": "cb108897-a149-4217-849f-411f7a6aef74",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "2570"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "len(memTab['Mem'])"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "id": "1692bb3a-fddf-4b7e-b0b4-d4c2ba48ece0",
    "metadata": {},
@@ -684,7 +695,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 46,
    "id": "6261a014-b6d7-42f3-a247-2749fa1029b7",
    "metadata": {},
    "outputs": [],
@@ -693,22 +704,23 @@
     "RA = cuttab['RA']\n",
     "DEC = cuttab['DEC']\n",
     "\n",
-    "Group_VFID = memTab['VFID'] # Kourkchi catalog VFIDs\n",
-    "Main_VFID = cuttab['VFID'] # VFS main catalog VFIDs\n",
+    "group_vfid = memTab['VFID'] # Kourkchi catalog VFIDs\n",
+    "main_vfid = cuttab['VFID'] # VFS main catalog VFIDs\n",
     "\n",
     "group_ra = []\n",
     "group_dec = []\n",
     "\n",
-    "for i in range(len(Main_VFID)): # repeat for all main catalog galaxies\n",
-    "    for j in range(len(Group_VFID)): # repeat for all Kourkchi group galaxies\n",
-    "        if Main_VFID[i] == Group_VFID[j]: # Compare all main catalog VFIDs to all Kourkchi galaxies and record the ones that match\n",
+    "# Matches Kourkchi group galaxies to the VFS main catalog galaxies and records their RA and DEC\n",
+    "for i in range(len(main_vfid)): # repeat for all main catalog galaxies\n",
+    "    for j in range(len(group_vfid)): # repeat for all Kourkchi group galaxies\n",
+    "        if main_vfid[i] == group_vfid[j]: # Compare all main catalog VFIDs to all Kourkchi galaxies and record the ones that match\n",
     "            group_ra.append(RA[i]) # RA of group galaxies\n",
     "            group_dec.append(DEC[i]) # DEC of group galaxies"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 47,
    "id": "7c743ce2-b26a-43c0-85e1-3e275b9e2132",
    "metadata": {},
    "outputs": [
@@ -718,7 +730,7 @@
        "2544"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -726,6 +738,34 @@
    "source": [
     "# number of group members\n",
     "len(group_ra)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5e11b368-b486-4ef9-8b5f-65af1b99e62a",
+   "metadata": {},
+   "source": [
+    "Some of these galaxies will also be filament members. This is expected; Zakharova+24 shows that about 51% of filament members are also members of groups."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "id": "83c9a2c2-fa98-46f5-9af3-a6604114b59e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of Group Galaxies in Filaments: 1381\n"
+     ]
+    }
+   ],
+   "source": [
+    "fil_group_vfid = [i for i in f_vfid if i in group_vfid]\n",
+    "\n",
+    "print('Number of Group Galaxies in Filaments:',len(fil_group_vfid))"
    ]
   }
  ],
